Fix "Version" for debugging on IE11
A value of `content` property for non-pseudo element cannot read with
`getComputedStyle()` on ~IE11.

--- a/debug.scss
+++ b/debug.scss
@@ -26,8 +26,9 @@
 // Version
 @import "version";
 
-html {
+html::after {
   content: "#{$version}";
+  display: none;
 }
 
 // Grid Overlay
